# EleFourier

./: .checkquality.config  CMakeLists.txt  PyFFTParallelProfiling.sh
EleFourier/: CMakeLists.txt
EleFourier/EleFourier/: Dft.h  DftPlan.h  DftType.h  TransformPlan.h  Zernike.h
EleFourier/conf/: EleFourierParallelizationTutorial.conf  EleFourierSparseExp.conf  EleFourierTutorial.conf
EleFourier/src/lib/: Dft.cpp  DftPlan.cpp  DftType.cpp  TransformPlan.cpp  Zernike.cpp
EleFourier/src/program/: EleFourierParallelizationTutorial.cpp  EleFourierSparseExp.cpp  EleFourierTutorial.cpp
EleFourier/tests/src/: DftPlan_test.cpp  DftType_test.cpp  Dft_test.cpp  TransformPlan_test.cpp  Zernike_test.cpp
PyFFTPlayground/: CMakeLists.txt
PyFFTPlayground/python/PyFFTPlayground/: DFT.py  LearnParallel.py  PyFFTParallel.py  PyFFTPlayground.py  PyFFTPlaygroundTutorial.py  PyFFTWPlayground.py  ScipyBackendsTutorial.py  Timer.py  bench_pyfftw_convolution.py  bench_pyfftw_rfft2.py
PyFFTPlayground/tests/python/: DFT_test.py  PyFFTPlayground_test.py  Timer_test.py
doc/: EleFourierTutorial_timing.md  mainpage.dox  parallel_pyFFTW.md  phase_diversity.ipynb
